--- a/mongodb/docker-compose.yaml
+++ b/mongodb/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     container_name: mongodb
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: <admin-user>
-      MONGO_INITDB_ROOT_PASSWORD: <admin-password>
-      MONGO_INITDB_DATABASE: <database to create>
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
     ports:
       - 27017:27017
     volumes:
