--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -4,12 +4,5 @@ spring:
       host: localhost
       port: 27012
       database: warehouse
-      username: "admin"
-      password: "warehousedb"
-server:
-  port: 8081
-  servlet:
-    context-path: /
-  compression:
-    enabled: true
-  address: localhost
+      username: "${MONGODB_USERNAME}"
+      password: "${MONGODB_PASSWORD}"
