added logstash config

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -6,3 +6,5 @@ spring:
       database: warehouse
       username: "${MONGODB_USERNAME}"
       password: "${MONGODB_PASSWORD}"
+logstash:
+  destination: localhost:5002
